# DLTrainingApp

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  dependency.cmake  main.cpp  mainwindow.ui
inc/: config.hpp  myDataset.hpp  netImpl.hpp  subWidget.hpp  train.hpp  variable.hpp
src/: main.cpp  myDataset.cpp  netImpl.cpp  subWidget.cpp  train.cpp  variable.cpp
